# dragon_bot

./: .env.example  .gitignore  README.md  check_db.py  docker-compose.yml  dockerfile  extrato_de_11-12-2025_ate_10-01-2026.csv  fix_database_schema.py  helper.txt  infra.yml  main.py  pyproject.toml  triggers.yaml
config/: triggers.yaml
src/app/: config.py  main.py
src/app/core/: __init__.py
src/app/core/entities/: __init__.py  trigger.py
src/app/core/interfaces/: __init__.py  chat.py  message.py
src/app/core/logic/: __init__.py  response.py  response_impl.py
src/app/core/services/: __init__.py  config_service.py  factory.py  trigger_manager.py
src/app/infrastructure/: __init__.py
src/app/infrastructure/database/: __init__.py  models.py  postgrees_client.py
src/app/infrastructure/network/: base_http_client.py
src/app/infrastructure/providers/: __init__.py
src/app/infrastructure/services/: __init__.py  api_client.py  storage.py  translate.py
src/app/infrastructure/webhooks/: __init__.py  evolution.py
src/app/kernel/: __init__.py  config.py
src/app/kernel/api/: __init__.py
src/app/kernel/core/: __init__.py  module.py
src/app/kernel/infrastructure/: __init__.py
src/app/kernel/utils/: __init__.py  image.py  timestamp.py  views.py
src/app/modules/: __init__.py
src/app/modules/finances/: __init__.py  configs.py  finances.css  models.py  provider.py
src/app/templates/: base.j2
src/app/utils/: image.py  logging_config.py  text.py
src/app/web/: __init__.py  api.py  views.py
tmp/: check_cat_types.py  check_del_cats.py  check_roots.py
(+174 files in other folders)
